src/styles/laji.scss
/* ... */
.informal-group-image.MVL\.2 {
  background-image: url('/static/images/informalGroups/MVL.2.svg');
}

.informal-group-image.MVL\.343 {
  background-image: url('/static/images/informalGroups/MVL.21.svg');
}

.informal-group-image.MVL\.22 {
  background-image: url('/static/images/informalGroups/MVL.22.svg');
}

.informal-group-image.MVL\.26 {
  background-image: url('/static/images/informalGroups/MVL.26.svg');
}

.informal-group-image.MVL\.27 {
  background-image: url('/static/images/informalGroups/MVL.27.svg');
}

.informal-group-image.MVL\.37 {
  background-image: url('/static/images/informalGroups/MVL.37.svg');
}

.informal-group-image.MVL\.39 {
  background-image: url('/static/images/informalGroups/MVL.39.svg');
}
.informal-group-image.MVL\.40 {
  background-image: url('/static/images/informalGroups/MVL.40.svg');
}

.informal-group-image.MVL\.41 {
  background-image: url('/static/images/informalGroups/MVL.41.svg');
}

.informal-group-image.MVL\.232 {
  background-image: url('/static/images/informalGroups/MVL.232.svg');
}

.informal-group-image.MVL\.233 {
  background-image: url('/static/images/informalGroups/MVL.233.svg');
}
.informal-group-image.MVL\.28 {
  background-image: url('/static/images/informalGroups/MVL.28.svg');
}

/** /informal taxon groups **/

.popover-lg {
  min-width: 400px;
}

.small-flag {
  height: 11px;
  width: auto;
}

/** Laji-Map **/
.laji-map {
  width: 100%;
  height: 100%;
}
.laji-map-dialog {
  z-index: 1051;
}
.laji-map-blocker {
  z-index: 1050;
}
/** Laji-Map **/

/** forms **/
.checkbox {
  background: none;
}

.laji-form .laji-form-map-container, .laji-form .popover {
  z-index: 0;
}

.laji-form .blocking-loader {
	z-index: 2;
}

.laji-form .leaflet-rrose {
  min-width: 200px;
}

/** /forms **/

/* Style when highlighting a search. */
.ui-select-highlight {
  font-weight: bold;
}

.ui-select-offscreen {
  clip: rect(0 0 0 0) !important;
  width: 1px !important;
  height: 1px !important;
  border: 0 !important;
  margin: 0 !important;
  padding: 0 !important;
  overflow: hidden !important;
  position: absolute !important;
  outline: 0 !important;
  left: 0px !important;
  top: 0px !important;
}

.ui-select-choices-row:hover {
  background-color: #f5f5f5;
}

/* Select2 theme */

/* Mark invalid Select2 */
.ng-dirty.ng-invalid > a.select2-choice {
  border-color: #D44950;
}

.select2-result-single {
  padding-left: 0;
}

.select2-locked > .select2-search-choice-close {
  display: none;
}

.select-locked > .ui-select-match-close {
  display: none;
}

body > .select2-container.open {
  z-index: 9999; /* The z-index Select2 applies to the select2-drop */
}

/* Handle up direction Select2 */
.ui-select-container[theme="select2"].direction-up .ui-select-match {
  border-radius: 4px; /* FIXME hardcoded value :-/ */
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.ui-select-container[theme="select2"].direction-up .ui-select-dropdown {
  border-radius: 4px; /* FIXME hardcoded value :-/ */
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;

  border-top-width: 1px; /* FIXME hardcoded value :-/ */
  border-top-style: solid;

  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);

  margin-top: -4px; /* FIXME hardcoded value :-/ */
}

.ui-select-container[theme="select2"].direction-up .ui-select-dropdown .select2-search {
  margin-top: 4px; /* FIXME hardcoded value :-/ */
}

.ui-select-container[theme="select2"].direction-up.select2-dropdown-open .ui-select-match {
  border-bottom-color: #5897fb;
}

.ui-select-container .ui-select-match-text {
  overflow: hidden;
  width: 80%;
  width: calc(100% - 30px);
}

/* Selectize theme */

/* Helper class to show styles when focus */
.selectize-input.selectize-focus {
  border-color: #007FBB !important;
}

/* Fix input width for Selectize theme */
.selectize-control > .selectize-input > input {
  width: 100%;
}

/* Fix dropdown width for Selectize theme */
.selectize-control > .selectize-dropdown {
  width: 100%;
}

/* Mark invalid Selectize */
.ng-dirty.ng-invalid > div.selectize-input {
  border-color: #D44950;
}

/* Handle up direction Selectize */
.ui-select-container[theme="selectize"].direction-up .ui-select-dropdown {
  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);

  margin-top: -2px; /* FIXME hardcoded value :-/ */
}

/* Bootstrap theme */

.raised-1 {
  box-shadow: 1px 1px 2px -1px #000
}

.raised-1 :active {
  box-shadow: none;
}

/* Helper class to show styles when focus */
.btn-default-focus {
  color: #333;
  background-color: #EBEBEB;
  border-color: #ADADAD;
  text-decoration: none;
  outline: 5px auto -webkit-focus-ring-color;
  outline-offset: -2px;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
}

.ui-select-bootstrap .ui-select-toggle {
  position: relative;
}

.ui-select-bootstrap .ui-select-toggle > .caret {
  position: absolute;
  height: 10px;
  top: 50%;
  right: 10px;
  margin-top: -2px;
}

/* Fix Bootstrap dropdown position when inside a input-group */
.input-group > .ui-select-bootstrap.dropdown {
  /* Instead of relative */
  position: static;
}

.input-group > .ui-select-bootstrap > input.ui-select-search.form-control {
  border-radius: 4px; /* FIXME hardcoded value :-/ */
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.input-group > .ui-select-bootstrap > input.ui-select-search.form-control.direction-up {
  border-radius: 4px !important; /* FIXME hardcoded value :-/ */
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.ui-select-bootstrap > .ui-select-match > .btn {
  /* Instead of center because of .btn */
  text-align: left !important;
}

.ui-select-bootstrap > .ui-select-match > .caret {
  position: absolute;
  top: 45%;
  right: 15px;
}

.ui-disabled {
  background-color: #eceeef;
  border-radius: 4px;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 5;
  opacity: 0.6;
  top: 0;
  left: 0;
  cursor: not-allowed;
}
/* ... */

